--- a/lab-03/teardown.yaml
+++ b/lab-03/teardown.yaml
@@ -5,22 +5,42 @@
 # Apache License v2.0
 # See LICENSE.TXT for details.
 
-- name: Remove user from group (needed before deleting user or group)
-  oci_identity_user_group_membership:
-    user_group_membership_id: "{{ user_group_membership_ocid }}"
+- name: Delete new boot volume
+  oci_blockstorage_boot_volume:
+    id: "{{ new_boot_volume_id }}"
     state: absent
 
-- name: Delete bob user
-  oci_identity_user:
-    id: "{{ bob_user_ocid }}"
+- name: Delete boot volume backup
+  oci_blockstorage_boot_volume_backup:
+    id: "{{ boot_volume_backup_id }}"
     state: absent
 
-- name: Delete groups
-  oci_identity_group:
-    id: "{{ object_readers_group_ocid }}"
+- name: Terminate the instance
+  oci_compute_instance:
+    id: "{{ instance_id }}"
     state: absent
 
-- name: Delete policies
-  oci_identity_policy:
-    id: "{{ object_readers_policy_ocid }}"
+- name: Delete the subnet
+  oci_network_subnet:
+    id: "{{ instance_subnet_id }}"
+    state: absent
+
+- name: Delete the security list
+  oci_network_security_list:
+    id: "{{ instance_security_list_ocid }}"
+    state: absent
+
+- name: Delete the route table
+  oci_network_route_table:
+    id: "{{ rt_id }}"
+    state: absent
+
+- name: Delete the Internet Gateway
+  oci_network_internet_gateway:
+    id: "{{ ig_id }}"
+    state: absent
+
+- name: Delete the VCN
+  oci_network_vcn:
+    vcn_id: "{{ vcn_id }}"
     state: absent
